<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SplashActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="45sp"
        android:textColor="#6e2828"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/whatlocation" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/enteredTown"
        android:hint="@string/townHint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/whatDistance"
        android:textColor="#000000"
        android:textSize="20sp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="number"
        android:id="@+id/etDistance"
        android:hint="@string/distance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.07">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginRight="40dp"
            android:text="Category"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="When?"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_weight="0.07">


        <Spinner
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:id="@+id/spinnerCat"
            android:entries="@array/spinnerCategorys">
        </Spinner>

        <Spinner
            android:layout_width="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:id="@+id/spinnerWhen"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerTime">
        </Spinner>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/btnGo"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myEvents"
        android:id="@+id/btnMyEvents"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.23"
        android:gravity="center"
        android:orientation="horizontal" >

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/go"
        android:paddingBottom="0dp"
        android:scaleType="fitEnd"
        android:src="@mipmap/eventplannerimage" />


</LinearLayout>
